fixed the table bg styling for admin & Editable not showing up

--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -474,9 +474,12 @@ div.modified {
     overflow: hidden;
     margin-top: 10px;
 }
-.user_profile_content table.cmu_table{
-    background-color: #FBFBFB;
-}
+.user_profile_content table.cmu_table{ background-color: #FBFBFB; }
+.user_profile_content table.cmu_table.user_profile_content_admin_editable{ background: #D5D6C1; }
+.user_profile_content table.cmu_table.user_profile_content_faculty_editable{ background: #D9E7E6; }
+
+
+
 .user_profile_content h2{
     padding-top: 5px;
 }
@@ -632,9 +635,6 @@ div.modified {
         text-align: right;
         vertical-align: middle;
     }
-
-.user_profile_content .user_profile_content_admin_editable{ background: #D5D6C1; }
-.user_profile_content .user_profile_content_faculty_editable{ background: #D9E7E6; }
 
 .user_profile_debugging{
     background-color: white;
